fix: dark mode theming for global nav bottom sheet

--- a/src/app/shared/global-nav/global-nav.component.scss
+++ b/src/app/shared/global-nav/global-nav.component.scss
@@ -4,7 +4,7 @@
 
 .global-nav-item--active {
   mat-icon,
-  [matListItemTitle] {
-    color: var(--mat-sys-primary);
+  .mat-mdc-list-item-title {
+    color: var(--mat-sys-primary) !important;
   }
 }
